[tool.poetry]
name = "matrix-loader"
package-mode = false
version = "0.1.0"
description = "Loading programs into the Matrix"
authors = ["npawlak"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
pandas = "^2.1.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"